deployment/prod/database_handler/database-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: production
spec:
  type: ExternalName
  externalName: switchyard.proxy.rlwy.net
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
