deployment/prod/database_handler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-handler
  namespace: production
  labels:
    app: database-handler
    version: 0.1.0-rc.3
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-handler
      environment: production
  template:
    metadata:
      labels:
        app: database-handler
        version: 0.1.0-rc.3
        environment: production
    spec:
      containers:
      - name: database-handler
        image: aldrickdev/database-handler:0.1.0-rc.3
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            # memory: "256Mi"
            # cpu: "200m"
            memory: "128Mi"
            cpu: "100m"
          limits:
            # memory: "1Gi"
            memory: "512Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: apmsocketpath
          mountPath: /var/run/datadog
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
---
apiVersion: v1
kind: Service
metadata:
  name: database-handler-service
  namespace: production
  labels:
    app: database-handler
    environment: production
spec:
  selector:
    app: database-handler
    environment: production
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
